------------------------------
* Use admin theme on log view pages (unless that setting is turned off).
* Renamed module css default variable.
* Now removes clear log form from standard dblog log view page.
* Filter name from url now requires non-digit as first character, and at least 2 chars length.
* Now allows for overwriting existing filter; implemented using non-AJAX request.

log_filter 7.x-1.x, 2013-05-25
------------------------------
* Implemented log details view.

log_filter 7.x-1.x, 2013-05-12
------------------------------
* Implemented log deletion.

log_filter 7.x-1.x, 2013-05-01
------------------------------
* Get log list.

log_filter 7.x-1.x, 2013-04-02
------------------------------
* Changing a criterion of a stored filter now triggers edit mode, not adhoc mode.

log_filter 7.x-1.x, 2013-04-01
------------------------------
* _listFilters().

log_filter 7.x-1.x, 2013-03-28
------------------------------
* Saving filters works.
* Implemented standards compliant url GET parameter (filter name) regime.

log_filter 7.x-1.x, 2013-03-28
------------------------------
* Working on saving (creating/updating) filter.

log_filter 7.x-1.x, 2013-03-26
------------------------------
* Now uses singular development branch.
* Implemented use of Judy.

log_filter 7.x-1.0.x, 2013-03-26
--------------------------------
* Removed Inspect module dependency.

log_filter 7.x-1.0.x, 2013-02-09
--------------------------------
* Frontend now strips tags off text fields.

log_filter 7.x-1.0.x, 2013-02-05
--------------------------------
* Finished message box; .showAll() working, and fully documented.

log_filter 7.x-1.0.x, 2013-02-03
--------------------------------
* Frontend now uses inspect.errorHandler().
* Implemented message box.

log_filter 7.x-1.0.x, 2013-02-02
--------------------------------
* Filter styling done.
* Implemented time fields.

log_filter 7.x-1.0.x, 2013-01-28
--------------------------------